id feature の位置がおかしかったので修正

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	  </div>
 
 	  <!-- Features -->
-	  <div class="wrapper style1">
+	  <div id="features" class="wrapper style1">
 	    
-	    <section id="features" class="container special">
+	    <section class="container special">
 	      <header>
 		<h2>2014/12/24 「ひらくり」リリース</h2>
 		<p>hirai familyが送るクリスマスソングです。</p>
