--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	    <div class="inner">
 	      <header>
 		<h1><a href="index.html" id="logo"></a></h1>
-		<img src="images/logo.png" alt="" width="280" />
+		<img class="image centerd" src="images/logo.png" alt="" width="250" />
 		<hr />
                 <p>
                 </p>
