--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
 	      <div class="media">
 		<p class="title">SoundCloud</p>
-	      <iframe width="980" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/120373879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+		<div class="soundcloud">
+		  <iframe align="center" width="980" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/120373879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+		</div>
 	      </div>
 	    </section>
 
