--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
 	      <div class="media" >
 		<p class="title">NicoNico</p>
+		<div class="niconico">
 		<script type="text/javascript" src="http://ext.nicovideo.jp/thumb_watch/sm25155282?w=980&h=614"></script><noscript><a href="http://www.nicovideo.jp/watch/sm25155282">【ニコニコ動画】【ヒロアキJ】メリーとニコラウス【歌ってみた】　※コラボセリフ付き</a></noscript>
+		</div>
 	      </div>
 
 	      <div class="media">
