--- a/index.html
+++ b/index.html
@@ -64,16 +64,24 @@
 		<p>hirai familyが送るクリスマスソングです。</p>
 	      </header>
 
+
+	      <div class="media" >
+		<p class="title">Youtube</p>
+		<div class="iframewrap">
+		  <iframe width="1120" height="630" src="https://www.youtube.com/embed/L9BrPe0_gfs" frameborder="0" allowfullscreen></iframe>
+		</div>
+	      </div>
+
 	      <div class="media" >
 		<p class="title">NicoNico</p>
-		<div class="niconico">
-		<script type="text/javascript" src="http://ext.nicovideo.jp/thumb_watch/sm25155282?w=980&h=614"></script><noscript><a href="http://www.nicovideo.jp/watch/sm25155282">【ニコニコ動画】【ヒロアキJ】メリーとニコラウス【歌ってみた】　※コラボセリフ付き</a></noscript>
+		<div class="iframewrap">
+		  <iframe width="624" height="176" src="http://ext.nicovideo.jp/thumb/sm25155282" scrolling="no" style="border:solid 1px #CCC;" frameborder="0"><a href="http://www.nicovideo.jp/watch/sm25155282">【ニコニコ動画】【ヒロアキJ】メリーとニコラウス【歌ってみた】　※コラボセリフ付き</a></iframe>
 		</div>
 	      </div>
 
 	      <div class="media">
 		<p class="title">SoundCloud</p>
-		<div class="soundcloud">
+		<div class="iframewrap">
 		  <iframe align="center" width="980" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/120373879&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 		</div>
 	      </div>
