--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<a href="#features" class="button circled scrolly">Feature</a>
 	      </footer>
 	    </div>
-	    
+
 	    <!-- Nav -->
 	    <nav id="nav">
 	      <ul>
@@ -53,6 +53,15 @@
 		<li><a href="#features" class="scrolly" >Feature</a></li>
 	      </ul>
 	    </nav>  
+
+	    <!-- sns -->
+	    <ul class="sns">
+              <li class="social-button">
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hiraifamily.github.io">Tweet</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              </li>
+	    </ul>
+
 	  </div>
 
 	  <!-- Features -->
