--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="hirai familyの公式ウェブサイト" />
 		<meta name="keywords" content="hirai family, ひらいファミリー, 平井, DOI, ファミリー, nnmn" />
+		<link href="/favicon.png" rel="icon">
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
