--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 	    <section class="container special">
 	      <header>
 		<h2>2014/12/24 「ひらくり」リリース</h2>
-		<p>hirai familyが送るクリスマスソングです。</p>
+		<img class="centerd" src="images/happy_christmas.png" alt="" width="800" />
+
+		<p>hirai familyが送るクリスマスソングです。PV、音源は以下のリンクからどうぞ。</p>
 	      </header>
 
 
