--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
 
 	    <!-- sns -->
 	    <ul class="sns">
+
+	      <li class="social-button">
+		<iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhiraifamily.github.io%2F&amp;width=100&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
+	      </li>
+
               <li class="social-button">
 		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hiraifamily.github.io">Tweet</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
               </li>
+
 	    </ul>
 
 	  </div>
