--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 			<link rel="stylesheet" href="css/style-noscript.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+
+		<script src="https://apis.google.com/js/platform.js" async defer>
+		  {lang: 'ja'}
+		</script>
+
 	</head>
 
 	<body class="homepage">
@@ -58,14 +63,18 @@
 	    <!-- sns -->
 	    <ul class="sns">
 
-	      <li class="social-button">
+	      <li>
 		<iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhiraifamily.github.io%2F&amp;width=100&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
 	      </li>
 
-              <li class="social-button">
+              <li>
 		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hiraifamily.github.io">Tweet</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
               </li>
+
+	      <li>
+		<div class="g-plusone" data-size="medium" data-annotation="inline" data-width="120" data-href="http://hiraifamily.github.io/"></div>
+	      </li>
 
 	    </ul>
 
