--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </p>
 	      </header>
 	      <footer>
-		<a href="#features" class="button circled scrolly">Feature</a>
+		<a href="#feature" class="button circled scrolly">Feature</a>
 	      </footer>
 	    </div>
 
@@ -56,7 +56,7 @@
 	    <nav id="nav">
 	      <ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="#features" class="scrolly" >Feature</a></li>
+		<li><a href="#feature" class="scrolly" >Feature</a></li>
 	      </ul>
 	    </nav>  
 
@@ -80,8 +80,8 @@
 
 	  </div>
 
-	  <!-- Features -->
-	  <div id="features" class="wrapper style1">
+	  <!-- Feature -->
+	  <div id="feature" class="wrapper style1">
 	    
 	    <section class="container special">
 	      <header>
